public/css/styles.css
body, html {
    color: white;
    background-color: #2A0944;
    font-family: 'Fauna One';
    margin: 0;
    
}

.title-banner {
    background-color: #2A0944;
    color: white;
    font-family: 'Cinzel';
    text-align: center;
    margin-top: 0;
}

.movie-title-text {
    padding-left: 0;
}

h1 {
    margin-top: 0;
    padding: 1rem;
}

button {
    font-family: 'Oswald';
}

.search-section {
    text-align: center;
}

.input-area {
    font-family: 'Oswald';
}

.search-button {
    font-family: 'Oswald';
}

.movie-container {

    display: grid;
    grid-template-columns: 1fr 1fr;
    margin-left: auto;
    margin-right: auto;
    margin-top: 2rem;
    width: 700px;
}

.imdb-image {
    height: 100px;
    width: 100px;
}

.imdb-text {
    text-align: center;
}

.rotten-tomato-image {
    height: 100px;
    width: 100px;
}

.rotten-tomato-text {
    text-align: center;
}

.metacritic-image {
    height: 100px;
    width: 100px;
}

.metacritic-text {
    text-align: center;
}

.critic-reviews {
    display: grid;
    margin-top: 3rem;
    grid-template-columns: 1fr 1fr 1fr;
}
.footer {
    background-color: #3B185F;
    position: fixed;
    margin: auto;
    bottom: 0;
    width: 100%;
}
.footer-text {
    color: white;
    text-align: center;
}

.sign-up-form {
    background-color: black;
    margin: 3rem auto auto;
    height: 400px;
    overflow-x: hidden;
    text-align: center;
    width: 500px;
}

.email-input {
    font-family: 'Oswald';
    margin: 1rem 2rem 1rem;
    width: 80%;


}

.password-input {
    font-family: 'Oswald';
    margin: 1rem 2rem 1rem;

    width: 80%;

}


.register-button {
    border: none;
    margin: auto;
    height: 2rem;
    text-transform: uppercase;
    width: 50%;
}

.register-button:hover {
    border: 1px solid white;
    background-color: black;
    color: white;
    cursor: pointer;
}

.register-title {
    color: white;
    text-align: center;
}

.login-notification {
    color: white;
    margin-top: 0;

}

.login-link {
    font-weight: 700;
}

.movie-error-message {
    text-align: center;
}

.add-to-favorites-button {
    background-color: black;
    border: none;
    color: white;
    margin-left: auto;
    padding: 0.7rem;
}

.add-to-favorites-button:hover {
    background-color: white;
    color: black;
    cursor: pointer;
}

.favorite-movies-link {
    float: right;
    margin-top: 2rem;
    padding-right: 1rem;
}

.web-title {
    display: inline-block;
    margin-bottom: 0;
}

